[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-security-fuzzer"
version = "0.0.1"
authors = [
    {name = "Prompt Security", email = "support@prompt.security"}
]
description = "LLM and System Prompt vulnerability scanner tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "setuptools>=61.0",
    "httpx>=0.24.0,<0.25.0",
    "openai==1.6.1",
    "langchain==0.0.353",
    "langchain-community==0.0.7",
    "langchain-core==0.1.4",
    "argparse==1.4.0",
    "python-dotenv==1.0.0",
    "tqdm==4.66.1",
    "colorama==0.4.6",
    "prettytable==3.10.0",
    "pandas==2.2.2",
    "inquirer==3.2.4",
    "prompt-toolkit==3.0.43",
    "fastparquet==2024.2.0",
    "chromadb>=0.4.0",
    "tiktoken>=0.11.0"
]

[project.optional-dependencies]
dev = ["pytest==7.4.4"]

[project.scripts]
prompt-security-fuzzer = "ps_fuzz.cli:main"

[project.urls]
Homepage = "https://github.com/prompt-security/ps-fuzz"
Repository = "https://github.com/prompt-security/ps-fuzz"

[tool.setuptools]
packages = ["ps_fuzz"]

[tool.setuptools.package-data]
ps_fuzz = ["attack_data/*"]
